--- a/min.css
+++ b/min.css
@@ -113,6 +113,7 @@ body {
     width: 100%;
     height: 350px;
     object-fit: contain;
+    border-radius: 10px;
 }
 
 .wrap1 {
@@ -189,6 +190,7 @@ body {
     font-size: 17px;
     font-family: sans-serif;
     color: #b09c00;
+    
 }
 
 .dis {
@@ -268,10 +270,40 @@ body {
     }
 
 }
+@media screen and (max-width:540px) {
+
+    .modal-content {
+        background-color: #fff;
+        width: 90%;
+        height: 500px;
+        margin: 0 auto;
+        margin-top: 50px;
+        border-radius: 10px;
+        text-align: center;
+    
+    }
+
+
+}
+
 
 @media screen and (max-width:499px) {
     .el {
         margin-top: 20px;
+    }
+
+}
+@media screen and (max-width:440px) {
+
+    .ul {
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+        justify-content: space-around;
+        font-size: 17px;
+        font-family: sans-serif;
+        color: #b09c00;
+        
     }
 
 }
